--- a/project/src/Dialogs/dialog.module.css
+++ b/project/src/Dialogs/dialog.module.css
@@ -6,6 +6,7 @@
   background-color: #313031;
   border: 1px solid;
   border-color: #454545 #212121 #191919 #212121;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px -3em 3em inset, rgba(0, 0, 0, 0.3) 0.3em 0.3em 1em;
 }
 .header {
   display: flex;
@@ -16,25 +17,68 @@
 .title {
   flex: 0 1 auto;
   align-self: center;
+  font-weight: 600;
 }
 .handle {
   flex: 1 1 auto;
+  min-width: 50px;
   margin: 2px 5px;
+  position: relative;
   background: repeating-linear-gradient(
     90deg,
     transparent 0 2px,
     #403f40 2px 4px
   )
 }
+.handle:after, .handle:before {
+  position: absolute;
+  content: ' ';
+  width: 100%;
+  height: 1px;
+  background: red;
+  bottom: 0;
+  background: repeating-linear-gradient(
+    90deg,
+    transparent 0 2px,
+    #000f00 2px 4px
+  );
+}
+.handle:before {
+  top: 0;
+  background: repeating-linear-gradient(
+    90deg,
+    #000f00 0 2px,
+    transparent 2px 4px
+  );
+}
+
 .closeButton {
   flex: 0 1 auto;
   width: 32px;
   height: 32px;
   border: 1px solid black;
+  display: flex;
+  border: 1px solid;
+  border-color: #212121 #191919 #454545 #212121;
+  
+  & button {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    flex-grow: 1;
+    color: white;
+    font-size: 30px;
+    border: 1px solid;
+    border-color: #454545 #212121 #191919 #212121;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 .body {
   background-color: #403f40;
-  width: 420px;
   height: 200px;
   margin: 0px 10px 10px;
 }
