--- a/project/src/components/Icon/icon.module.css
+++ b/project/src/components/Icon/icon.module.css
@@ -2,11 +2,11 @@
 .icon {
   position: relative;
   display: inline-flex;
+  width: 32px;
+  height: 32px;
 }
 
 .icon img {
-  width: 32px;
-  height: 32px;
 }
 
 .subscript {
@@ -17,4 +17,15 @@
   font-size: 14px;
   font-weight: 600;
   text-shadow: 0px 0px 1px #000, 0px 0px 1px #000, 0px 0px 1px #000, 0px 0px 1px #000, 0px 0px 1px #000;
+}
+
+.text {
+  width: 32px;
+  height: 32px;
+  color: white;
+  font-size: 30px;
+  line-height: 1;
+  text-align: center;
+  display: flex;
+  align-items: center;
 }
