--- a/project/src/components/SignalGrid/styles.module.css
+++ b/project/src/components/SignalGrid/styles.module.css
@@ -9,14 +9,22 @@
   & > div {
     width: 40px;
     height: 40px;
-    background: #313131;
-    border-radius: 5px;
-    border: 1px solid;
-    border-color: #454545 #212121 #191919 #212121;
     margin: 1px;
     cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+    & > :global(.btn) {
+      &:not(:hover):not(.active) {
+        background: #313131;
+        border: 1px solid;
+        border-color: #454545 #212121 #191919 #212121;
+      }
+  
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 5px;
+      height: 100%;
+      width: 100%;
+    }
   }
 }
