--- a/project/src/components/Icon/icon.module.css
+++ b/project/src/components/Icon/icon.module.css
@@ -25,7 +25,7 @@
   color: white;
   font-size: 30px;
   line-height: 1;
-  text-align: center;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
