--- a/project/src/index.css
+++ b/project/src/index.css
@@ -2,6 +2,10 @@
   --brightness: 3;
 }
 
+html, body, #root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
