--- a/project/src/Dialogs/dialog.module.css
+++ b/project/src/Dialogs/dialog.module.css
@@ -4,7 +4,7 @@
   z-index: 1;
   top: 100px;
   left: 100px;
-  background-color: #313031;
+  background-color: var(--light-gray);
   border: 1px solid;
   border-color: #454545 #212121 #191919 #212121;
   box-shadow: rgba(0, 0, 0, 0.1) 0px -3em 3em inset, rgba(0, 0, 0, 0.3) 0.3em 0.3em 1em;
